--- a/RepoGrabber/RepoGrabber.csproj
+++ b/RepoGrabber/RepoGrabber.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
     <PackageReference Include="System.Management.Automation" Version="7.4.3" />
-    <PackageReference Include="UDE.CSharp" Version="1.1.0" />
+    <PackageReference Include="Ude.NetStandard" Version="1.2.0" />
   </ItemGroup>
 
 </Project>
